Print result of each test when testing

--- a/build.gradle
+++ b/build.gradle
@@ -179,3 +179,9 @@ task resetVersion(dependsOn: ':version') {
         setVersion(System.in.newReader().readLine(), true)
     }
 }
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
