--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: "java"
 
 jdk: "oraclejdk8"
 
-script: "./gradlew build"
+script: "./gradlew clean build --rerun-tasks --scan"
 
 before_deploy:
   - ./gradlew clean
