Test on multiple JDKs

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,13 @@ sudo: false
 
 language: "java"
 
-jdk: "oraclejdk8"
+jdk:
+- oraclejdk8
+- oraclejdk9
+- oraclejdk10
+- openjdk8
+- openjdk9
+
 
 script: "./gradlew clean build --rerun-tasks --scan"
 
@@ -23,3 +29,4 @@ deploy:
   name: $NAME
   on:
       branch: master
+      jdk: oraclejdk8
