--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ deploy:
       - git push "https://$GH_TOKEN@github.com/Samasaur1/Maven-Central.git master > /dev/null 2>&1
     on:
         tags: true
+        jdk: oraclejdk8
   - provider: releases
     api_key: "$GH_TOKEN"
     file_glob: true
