--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ language: "java"
 jdk:
 - oraclejdk8
 - oraclejdk9
-- oraclejdk10
 - openjdk8
 - openjdk9
+- openjdk10
 
 
 script: "./gradlew clean build --rerun-tasks --scan" # gradle build runs test
