--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 sudo: false
+dist: bionic
 
 language: "java"
 
 jdk:
 - oraclejdk8
 - oraclejdk9
+- oraclejdk11
 - openjdk8
 - openjdk9
-- openjdk10
+- openjdk11
 
 
 script: "./gradlew clean build --rerun-tasks --scan" # gradle build runs test
