--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group 'com.gauck.sam'
-version '1.7.0'
+version '1.7.1'
 
 sourceCompatibility = 1.8
 
@@ -30,8 +30,8 @@ publishing {
             name = "GitHub"
             url = uri("https://maven.pkg.github.com/Samasaur1/Utilities")
             credentials {
-                username = findProperty("GITHUB_ACTOR")
-                password = findProperty("GITHUB_API_TOKEN")
+                username = findProperty("USERNAME") ?: System.getenv("GITHUB_ACTOR")
+                password = findProperty("GITHUB_API_TOKEN") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
